crates/tui/snapshots/fullscreen/marketplace/skills_empty_panel.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search available skills                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  No matching skills                                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Tab/Shift+Tab to switch · Enter to return · Esc to close
